Security enhancements, and I ran the code cleanupIDE command over the source. Security is still not in the tests, BTW.